# artconomy

./: .babelrc  .browserslistrc  .coveragerc  .dockerignore  .gitignore  .htpasswd  ADDITIONAL_TERMS  Dockerfile  LICENSE  Makefile  NOTICE  README.md  common-services.yml  constraints.in  deploy_requirements.in  deploy_requirements.txt  dev_settings.json  docker-compose.yml  docker-entrypoint.sh  eslint.config.mjs  jest.config.js  manage.py  mass_change.py  mypy_django.ini  output.js  package-lock.json  package.json  pf_artconomy.conf  requirements.in  requirements.txt  ruff.toml  run_reports.sh  setup.cfg  tsconfig.json  vite.config.ts  vue.config.js
.github/workflows/: dependency-review.yml
ansible/: ansible.cfg  dump.yml  inventory  package-lock.json  production.yml  stage.yml
ansible/group_vars/: production.yml  stage.yml
backend/: __init__.py  base_sitemaps.py  shortcuts.py  sitemaps.py  urls.py  views.py  wsgi.py
backend/conf/: asgi.py  celery_config.py  settings.py  sitemaps.py  urls.py  wsgi.py
backend/templates/: email_base.html  index.html  report_email.txt  support_email.txt
backend/tests/: test_resources.py  tests.py
config/: pf.conf
config/nginx/: nginx.conf
config/pf.anchors/: artconomy
dev_keys/: crt.pem  dev_https  private.key
docker/: app_Dockerfile  nginx_Dockerfile
frontend/: App.vue  artconomy.css  demo.ts  index.html  lib.ts  main.ts  registerServiceWorker.ts  shims-vue.d.ts  shims-vuex.d.ts  snippets.html  supportedBrowsers.js  supportedBrowsers.ts  vue.config.js  window-type.d.ts
frontend/__mocks__/: axios.ts
frontend/components/: AcAddButton.vue  AcAsset.vue  AcAssetPreview.vue  AcAudioPlayer.vue  AcAvatar.vue  AcCharacterPreview.vue  AcCookieConsent.vue  AcCookiedAlert.vue  AcDeliverablePreview.vue  AcDeliverableStatus.vue  AcDraggableList.vue  AcDraggableNavs.vue  AcEscrowLabel.vue  AcGalleryPreview.vue  AcGrowSpinner.vue  AcHiddenFlag.vue  AcIcon.vue  AcIndicator.vue  AcInvoiceStatus.vue  AcJournals.vue  AcKillButton.vue  AcMarkdownViewer.vue  AcMiniCharacter.vue  AcNewSubmission.vue  AcOrderPreview.vue  AcOrderStatus.vue  AcPdfNav.vue  AcPdfViewer.vue  AcPricePreview.vue  AcProductPreview.vue  AcProductSlider.vue  AcProfilePreview.vue  AcRatingButton.vue  AcReportButton.vue  AcReportFlagExplanations.vue  AcShareButton.vue  AcShareManager.vue  AcStripeCharge.vue  AcTab.vue  AcTagDisplay.vue  (+3 more)
frontend/config/: index.js
frontend/lib/: formattingTools.ts  lib.ts  lineItemFunctions.ts  markdown.ts  otherFormatters.ts  snow.ts  vMask.ts
frontend/mixins/: ErrorHandling.ts  PrerenderMixin.ts  PricingAware.ts  RatingRefresh.ts  alerts.ts  asset_base.ts  dialog.ts  editable.ts  editorBase.ts  formatting.ts  nav.ts  prerendering.ts  ratings.ts  sharable.ts  subjective.ts  upload.ts  viewer.ts
frontend/plugins/: createRegistries.ts  shortcuts.ts  socket.ts  targets.ts  vuetify.ts
frontend/router/: index.ts
frontend/specs/: App.spec.ts  globalTearDown.ts  lib.spec.ts  setupTestEnv.ts
frontend/src/: App.vue  artconomy.css  custom-bootstrap.scss  lib.js  main.js
frontend/store/: artState.ts  controller-base.ts  hooks.ts  index.ts  registry-base.ts  state.ts
frontend/types/: AcDraggableListProps.ts  AcDraggableNavsProps.ts  AcNotification.ts  AcServerError.ts  AccountType.ts  ArtistTag.ts  (+81 more)
rust/line_items/: Cargo.toml  pyproject.toml
rust/line_items/src/: data.rs  lib.rs  test.rs
static/: 503.html  index.html
static_resources/: 503.html
(+1474 files in other folders)
