[package]
name = "line_items"
version = "0.1.1"
edition = "2021"
description = "A set of line item calculation utilities for Artconomy."
license = "AGPL-3"
repository = "https://github.com/Kelketek/artconomy"

[lib]
name = "line_items"
crate-type = ["cdylib"]

[features]
wasm = ["dep:wasm-bindgen"]
python = ["dep:pyo3"]

[dependencies]
ntest = "0.9.3"
rust_decimal = { version = "1.38.0", features = ["serde_json"] }
rust_decimal_macros = "1.38.0"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
wasm-bindgen = { version = "0.2.103", features = ["serde-serialize"], optional = true }
js-sys = "0.3.80"
serde-wasm-bindgen = "0.6.5"
console_error_panic_hook = "0.1.7"
pyo3 = { version = "0.26.0", features = ["extension-module"], optional = true }
serde_repr = "0.1.20"

[dev-dependencies]
pretty_assertions = "1.4.1"

[profile.release]
lto = true
opt-level = 'z'
