[package]
name = "line_items"
version = "0.1.1"
edition = "2021"
description = "A set of line item calculation utilities for Artconomy."
license = "AGPL-3"
repository = "https://github.com/Kelketek/artconomy"

[lib]
name = "line_items"
crate-type = ["cdylib"]

[features]
# Defines a feature named `webp` that does not enable any other features.
wasm = ["dep:wasm-bindgen"]
python = ["dep:pyo3", "dep:dict_derive"]

[dependencies]
dict_derive = { version = "0.5.0", optional = true }
ntest = "0.9.2"
rust_decimal = { version = "1.35.0", features = ["serde_json"] }
rust_decimal_macros = "1.34.2"
serde = { version = "1.0.203", features = ["derive"] }
serde_derive = "1.0.203"
serde_json = "1.0.117"
wasm-bindgen = { version = "0.2.92", features = ["serde-serialize"], optional = true }
js-sys = "0.3.69"
serde-wasm-bindgen = "0.6.5"
console_error_panic_hook = "0.1.7"
log = "0.4.21"
pyo3 = { version = "0.24.1", features = ["extension-module"], optional = true }

[profile.release]
lto = true
opt-level = 'z'
